// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match the snapshot with all data passed in correctly 1`] = `
<header
  className="header"
>
  <div
    className="left-header"
  >
    <h1>
      WELCOME 
      <span>
        Chase
      </span>
    </h1>
    <h2>
      Ranking: Novice
    </h2>
  </div>
  <div
    className="right-header"
  >
    <Link
      to="/"
    >
      <button
        className="show"
        onClick={[Function]}
      >
        Sign Out
      </button>
    </Link>
    <p
      className="quote"
    >
      Obscure StarWars Quote
    </p>
  </div>
</header>
`;

exports[`Header should match the snapshot with empty strings passed in 1`] = `
<header
  className="header"
>
  <div
    className="left-header"
  >
    <h1>
      WELCOME 
      <span />
    </h1>
    <h2 />
  </div>
  <div
    className="right-header"
  >
    <Link
      to="/"
    >
      <button
        className="hide"
        onClick={[Function]}
      >
        Sign Out
      </button>
    </Link>
    <p
      className="quote"
    />
  </div>
</header>
`;
